# scalectrl

./: .gitignore  CMakeLists.txt  LICENSE  README.md  flash.sh  sdkconfig  sdkconfig.defaults  sdkconfig.old
case/: Base Mount.step  BottomCase.step  ResetDorn.step  TopCase.step
main/: CMakeLists.txt  idf_component.yml  main.c
main/display/wavesharelcd2/: battery.c  display_init.c  display_init.h
main/lvgl/: lvgl_init.c  lvgl_init.h
main/scale/: ble.c  ble.h
main/ui/: view01.c  view01.h
main/ui/controller/: battery_ctrl.c  battery_ctrl.h  scale_ctrl.c  scale_ctrl.h  timer_ctrl.c  timer_ctrl.h
main/ui/fonts/: Readme.md  roboto_bold_40.c  roboto_bold_40.h  roboto_bold_60.c  roboto_bold_60.h  roboto_mono_20.c  roboto_mono_20.h  roboto_mono_40.c  roboto_mono_40.h  roboto_regular_20.c  roboto_regular_20.h  roboto_regular_40.c
scratch/: example.txt
